<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/spacing_20">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textTitle"
        style="@style/WhiteTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_20"
        android:background="@color/black"
        android:gravity="center_horizontal"
        android:text="@string/food_menu"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textAdditionalWhiteText"
        style="@style/WhiteTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_3"
        android:background="@color/black"
        android:gravity="center_horizontal"
        android:text="@string/start_cooking_today"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textAdditionalOLSOText"
        style="@style/OlsoTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_5"
        android:background="@color/black"
        android:gravity="center_horizontal"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAdditionalWhiteText"
        tools:text="tags: Soup, Baking, Calorific"
        tools:visibility="visible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textHeaderTitle"
        style="@style/WhiteTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_23"
        android:layout_marginLeft="@dimen/spacing_23"
        android:background="@color/black"
        android:text="@string/features"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAdditionalOLSOText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textHeaderInfo"
        style="@style/OlsoTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_23"
        android:layout_marginLeft="@dimen/spacing_23"
        android:layout_marginTop="1dp"
        android:background="@color/black"
        android:text="@string/challenge_yourself_generate_random_food_for_you_to_cook_today"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeaderTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardFeatureCategoryItemWrapper"
        android:layout_width="200dp"
        android:layout_height="237dp"
        android:layout_marginStart="@dimen/spacing_23"
        android:layout_marginLeft="@dimen/spacing_23"
        android:layout_marginTop="@dimen/spacing_13"
        app:cardBackgroundColor="@color/OLSO_grey"
        app:cardCornerRadius="@dimen/spacing_21"
        app:cardElevation="@dimen/spacing_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeaderInfo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintFeatureCategoryItemWrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/OLSO_grey"
            android:paddingTop="@dimen/spacing_25">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageFood"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:background="@color/OLSO_grey"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textItem"
                style="@style/OlsoTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/OLSO_grey"
                android:gravity="center_horizontal"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageFood"
                tools:text="Random food" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textHeaderTitle2"
        style="@style/WhiteTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_23"
        android:layout_marginLeft="@dimen/spacing_23"
        android:layout_marginTop="@dimen/spacing_30"
        android:background="@color/black"
        android:text="@string/categories"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardFeatureCategoryItemWrapper" />

    <LinearLayout
        android:id="@+id/linearCategoryShimmerWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textHeaderTitle2">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardFeatureCategoryItemWrapper2"
            android:layout_width="200dp"
            android:layout_height="237dp"
            android:layout_marginStart="@dimen/spacing_23"
            android:layout_marginLeft="@dimen/spacing_23"
            android:layout_marginTop="@dimen/spacing_13"
            app:cardBackgroundColor="@color/OLSO_grey"
            app:cardCornerRadius="@dimen/spacing_21"
            app:cardElevation="@dimen/spacing_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHeaderInfo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardFeatureCategoryItemWrapper3"
            android:layout_width="200dp"
            android:layout_height="237dp"
            android:layout_marginStart="@dimen/spacing_23"
            android:layout_marginLeft="@dimen/spacing_23"
            android:layout_marginTop="@dimen/spacing_13"
            app:cardBackgroundColor="@color/OLSO_grey"
            app:cardCornerRadius="@dimen/spacing_21"
            app:cardElevation="@dimen/spacing_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textHeaderInfo" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textHeaderTitle3"
        style="@style/WhiteTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_23"
        android:layout_marginLeft="@dimen/spacing_23"
        android:layout_marginTop="@dimen/spacing_30"
        android:background="@color/black"
        android:text="@string/food_of_the_day"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearCategoryShimmerWrapper" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="@dimen/spacing_23"
        android:layout_marginLeft="@dimen/spacing_23"
        android:layout_marginEnd="@dimen/spacing_23"
        android:layout_marginRight="@dimen/spacing_23"
        app:cardBackgroundColor="@color/OLSO_grey"
        app:cardCornerRadius="@dimen/spacing_21"
        app:cardElevation="@dimen/spacing_10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeaderTitle3" />
</androidx.constraintlayout.widget.ConstraintLayout>