<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorFragmentDetailWrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jaguar">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintFragmentDetailBGWrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/spacing_15"
            android:layout_marginLeft="@dimen/spacing_15"
            android:layout_marginTop="@dimen/spacing_13"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textChallengeYourself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/russo_one_regular"
            android:gravity="center_horizontal"
            android:text="@string/challenge_yourself"
            android:textColor="@color/OLSO_grey"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textCookFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/russo_one_regular"
            android:gravity="center_horizontal"
            android:text="@string/cook_any_food_that_you_get"
            android:textColor="@color/OLSO_grey"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textChallengeYourself" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintFragmentDetailBottomSheetWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_90"
        android:background="@drawable/rounded_background_58"
        app:behavior_hideable="false"
        app:layout_behavior="@string/bottom_sheet_behavior"
        tools:peekHeight="100dp">

        <View
            android:id="@+id/bottomFragmentDetailSheetUpperLine"
            android:layout_width="60dp"
            android:layout_height="2dp"
            android:layout_marginTop="@dimen/spacing_20"
            android:background="@drawable/bottom_sheet_upper_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageAddToFavorite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/spacing_13"
            android:layout_marginEnd="@dimen/spacing_25"
            android:layout_marginRight="@dimen/spacing_25"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_unfavorite" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFavorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imageAddToFavorite" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/relativeBottomAttrWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/black">

        <LinearLayout
            android:id="@+id/linearSourceYoutubeWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_20"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textSource"
                style="@style/OlsoTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingStart="@dimen/spacing_30"
                android:paddingLeft="@dimen/spacing_30"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:text="@string/source"
                android:textSize="25sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textYoutube"
                style="@style/OlsoTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_20"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingEnd="@dimen/spacing_30"
                android:paddingRight="@dimen/spacing_30"
                android:text="@string/youtube"
                android:textSize="25sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRandom"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_below="@+id/linearSourceYoutubeWrapper"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/spacing_18"
            android:layout_marginLeft="@dimen/spacing_18"
            android:layout_marginEnd="@dimen/spacing_18"
            android:layout_marginRight="@dimen/spacing_18"
            android:layout_marginBottom="28dp"
            android:background="@drawable/rounded_light_blue_bg"
            android:fontFamily="@font/russo_one_regular"
            android:gravity="center"
            android:text="@string/random"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:visibility="gone"
            tools:visibility="visible" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/OLSO_grey"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        tools:targetApi="lollipop"
        tools:visibility="visible" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>